// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select screenshot default 1`] = `
":root {
    --clr-bg-gray-1: #ffffff;
    --clr-bg-gray-2: #f6f8fb;
    --clr-bg-gray-3: #eff2f7;
    --clr-bg-gray-500: #a3acbf;

    --clr-el-gray-000: #ffffff;
    --clr-el-gray-010: #cad6ee1a;
    --clr-el-gray-015: #b0bdd626;
    --clr-el-gray-020: #b0bdd633;
    --clr-el-gray-030: #a5b1ca4d;
    --clr-el-gray-040: #8694b066;
    --clr-el-gray-050: #475a8080;
    --clr-el-gray-060: #1a2b4d99;
    --clr-el-gray-070: #000c24b2;
    --clr-el-gray-080: #2f3747;
    --clr-el-gray-090: #121725f2;

    --clr-el-yellow-010: #ffdd574d;
    --clr-el-yellow-020: #ffdd578c;
    --clr-el-yellow-100: #ffdd57;
    --clr-el-yellow-200: #ffd21f;
    --clr-el-yellow-300: #f7c408;

    --clr-el-red-010: #dd00001a;
    --clr-el-red-020: #dd000033;
    --clr-el-red-040: #dd000066;
    --clr-el-red-060: #dd000099;
    --clr-el-red-100: #dd0000;

    --clr-el-green-010: #33b34326;
    --clr-el-green-020: #33b34340;
    --clr-el-green-060: #33b343b2;
    --clr-el-green-100: #33b343;

    --clr-el-blue-010: #498bff33;
    --clr-el-blue-060: #498bffb2;
    --clr-el-blue-100: #498bff;

    --clr-str-black-050: #475a807f;
    --clr-str-black-800: #2f3747;
    --clr-str-black-900: #252a38;

    --clr-str-white-060: #afc2e699;
    --clr-str-white-080: #d1e1ffcc;
    --clr-str-white-100: #fff;

    --clr-str-pure-white-050: #ffffff7f;
    --clr-str-pure-white-060: #ffffffb3;

    --clr-bg-app: var(--clr-bg-gray-3);

    --clr-dash-green-01: #65b812;
    --clr-dash-green-02: #9dd926;
    --clr-dash-green-03: #9dd92666;
    --clr-dash-green-04: #65b81233;

    --clr-dash-yellow-01: #ffcc00;
    --clr-dash-yellow-02: #ffe666;
    --clr-dash-yellow-03: #ffe66666;
    --clr-dash-yellow-04: #ffcc0033;

    --clr-dash-orange-01: #ff9a33;
    --clr-dash-orange-02: #ffb851;
    --clr-dash-orange-03: #ffb85166;
    --clr-dash-orange-04: #ff9a3333;

    --clr-dash-red-01: #e53c1a;
    --clr-dash-red-02: #ff6647;
    --clr-dash-red-03: #ff664766;
    --clr-dash-red-04: #e53c1a33;

    --clr-dash-violet-01: #7a45e6;
    --clr-dash-violet-02: #aa80ff;
    --clr-dash-violet-03: #7a45e533;
    --clr-dash-violet-04: #6e30e833;

    --clr-dash-blue-01: #3388ff;
    --clr-dash-blue-02: #66b3ff;
    --clr-dash-blue-03: #66b3ff66;
    --clr-dash-blue-04: #3388ff33;

    --clr-dash-grey-01: #c2c9d6;
    --clr-dash-grey-02: #e0e6ef;
    --clr-dash-grey-03: #e0e6ef66;
    --clr-dash-grey-04: #c2c9d633;

    --clr-dash-cornflow-01: #6673ff;
    --clr-dash-cornflow-02: #99a2ff;
    --clr-dash-cornflow-03: #99a2ff66;
    --clr-dash-cornflow-04: #6673ff33;

    --clr-dash-magenta-01: #ff3399;
    --clr-dash-magenta-02: #ff66b2;
    --clr-dash-magenta-03: #ff66b266;
    --clr-dash-magenta-04: #ff007f33;

    --clr-dash-dustmagenta-01: #cc297a;
    --clr-dash-dustmagenta-02: #d9418d;
    --clr-dash-dustmagenta-03: #d9418d66;
    --clr-dash-dustmagenta-04: #cc297a33;

    --clr-dash-dustpink-01: #e5515e;
    --clr-dash-dustpink-02: #e56772;
    --clr-dash-dustpink-03: #e7526366;
    --clr-dash-dustpink-04: #e5515e33;

    --clr-dash-dustblue-01: #4643bf;
    --clr-dash-dustblue-02: #5252cc;
    --clr-dash-dustblue-03: #5252cc66;
    --clr-dash-dustblue-04: #4f4cd933;

    --clr-dash-dustgreen-01: #4d993d;
    --clr-dash-dustgreen-02: #63a642;
    --clr-dash-dustgreen-03: #63a64266;
    --clr-dash-dustgreen-04: #4d993d33;

    --clr-dash-teal-01: #0fbda0;
    --clr-dash-teal-02: #36e2c6;
    --clr-dash-teal-03: #36e2c666;
    --clr-dash-teal-04: #0fbda033;

    --clr-dash-coffee-01: #965a3c;
    --clr-dash-coffee-02: #c86e46;
    --clr-dash-coffee-03: #c86e4666;
    --clr-dash-coffee-04: #965a3233;
}
:root {
    --space-2: 2px;
    --space-4: 4px;
    --space-5: 5px;
    --space-6: 6px;
    --space-8: 8px;
    --space-10: 10px;
    --space-12: 12px;
    --space-14: 14px;
    --space-16: 16px;
    --space-18: 18px;
    --space-20: 20px;
    --space-24: 24px;
    --space-28: 28px;
    --space-32: 32px;
    --space-40: 40px;
    --space-48: 48px;
}
@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/PyVcRbwHetz0gOVWLonWH7Od8zM.woff2') format('woff2'),
        url('//yastatic.net/islands/_/bIx8jOfCEfR-mECoDUEZywDBuHA.woff') format('woff');
    font-weight: 400;
    font-style: normal;
    font-display: optional;
}

@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/7_GKBdKFbUPzKlghJRv55xgz0FQ.woff2') format('woff2'),
        url('//yastatic.net/islands/_/SmqPmIMEXrW4lOY8QrhTUVDbrro.woff') format('woff');
    font-weight: 500;
    font-style: normal;
    font-display: optional;
}

@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/6Roy0LCd05cK4nNCipgzheYcNVU.woff2') format('woff2'),
        url('//yastatic.net/islands/_/KtHQR1erf3spayoIM4M4ngg0e2E.woff') format('woff');
    font-weight: 700;
    font-style: normal;
    font-display: optional;
}

body,
input,
textarea,
button {
    font-family: 'YS Text', arial, sans-serif;
}

:root {
    --line-height-13: 13px;
    --line-height-14: 14px;
    --line-height-16: 16px;
    --line-height-18: 18px;
    --line-height-20: 20px;
    --line-height-24: 24px;
    --line-height-28: 28px;
    --line-height-32: 32px;
    --line-height-40: 40px;

    --font-size-11: 11px;
    --font-size-12: 12px;
    --font-size-14: 14px;
    --font-size-16: 16px;
    --font-size-20: 20px;
    --font-size-24: 24px;
    --font-size-32: 32px;
}
:root {
    --shdw-popover: 0px 0px 3px rgba(165, 177, 202, 0.3), 0px 10px 40px rgba(165, 177, 202, 0.3);
    --shdw-el-focused: 0 0 0 2px var(--clr-el-blue-060);
}
.button {
    border: none;
    cursor: pointer;
    background-color: transparent;
    padding: 0;
    outline: none;
}
    .button:focus-visible .button__shape {
        box-shadow: var(--shdw-el-focused);
    }
    .button__shape {
        display: flex;
        align-items: center;
        justify-content: center;
        transition: transform 0.1s ease-out, color 0.15s linear;
        color: var(--clr-el-gray-080);
        border-radius: var(--button-border-radius);
    }
    .button_rounded .button__shape {
        border-radius: calc(
            (
                    var(--button-mode-text-vertical-padding) * 2 + var(--button-line-height) +
                        var(--button-text-padding-bottom)
                ) / 2
        );
    }
    .button:active .button__shape {
        transition: none;
        transform: scale(0.96);
    }
    .button:disabled .button__shape,
    .button:disabled:hover .button__shape {
        transform: scale(1);
        background-color: var(--clr-el-gray-020);
        color: var(--clr-el-gray-050);
        cursor: default;
    }
    .button_mode_icon .button__shape {
            padding: var(--button-mode-icon-padding);
        }
    .button_mode_text .button__shape {
            padding: var(--button-mode-text-padding);
        }
    .button_with-left-icon .button__shape {
        padding-left: var(--button-mode-text-with-icon-horizontal-padding);
    }
    .button_with-right-icon .button__shape {
        padding-right: var(--button-mode-text-with-icon-horizontal-padding);
    }
    .button_size_s32 {
            --button-border-radius: 10px;
            --button-font-size: 14px;
            --button-line-height: 20px;

            --button-mode-text-vertical-padding: 5px;
            --button-mode-text-padding: var(--button-mode-text-vertical-padding) var(--space-12);
            --button-mode-text-with-icon-horizontal-padding: var(--space-8);
            --button-text-padding-bottom: var(--space-2);

            --button-mode-icon-padding: var(--space-8);
        }
    .button_size_s36 {
            --button-border-radius: 12px;
            --button-font-size: 14px;
            --button-line-height: 20px;

            --button-mode-text-padding: var(--space-8) var(--space-16);
            --button-mode-text-with-icon-horizontal-padding: var(--space-12);
            --button-text-padding-bottom: 0;

            --button-mode-icon-padding: 10px;
        }
    .button_size_s44 {
            --button-border-radius: 14px;
            --button-font-size: 16px;
            --button-line-height: 24px;

            --button-mode-text-vertical-padding: 10px;
            --button-mode-text-padding: var(--button-mode-text-vertical-padding) var(--space-20);
            --button-mode-text-with-icon-horizontal-padding: 14px;
            --button-text-padding-bottom: 0px;

            --button-mode-icon-padding: 10px;
        }
    .button_size_s56 {
            --button-border-radius: 14px;
            --button-font-size: 20px;
            --button-line-height: 28px;

            --button-mode-text-vertical-padding: 13px;
            --button-mode-text-padding: var(--button-mode-text-vertical-padding) var(--space-20);
            --button-mode-text-with-icon-horizontal-padding: 14px;
            --button-text-padding-bottom: var(--space-2);

            --button-mode-icon-padding: var(--space-16);
        }
    .button_view_contrast .button__shape {
            background-color: var(--clr-bg-gray-1);
        }
    .button_view_contrast .button__shape:hover {
                background-color: var(--clr-bg-gray-2);
            }
    .button_view_contrast .button__shape:active {
                background-color: var(--clr-bg-gray-2);
            }
    .button_view_shade .button__shape {
            background-color: var(--clr-el-gray-020);
        }
    .button_view_shade .button__shape:hover {
                background-color: var(--clr-el-gray-030);
            }
    .button_view_shade .button__shape:active {
                background-color: var(--clr-el-gray-030);
            }
    .button_view_primary .button__shape {
            background-color: var(--clr-el-yellow-100);
        }
    .button_view_primary .button__shape:hover {
                background-color: var(--clr-el-yellow-200);
            }
    .button_view_primary .button__shape:active {
                background-color: var(--clr-el-yellow-200);
            }
    .button_view_contour .button__shape {
            box-shadow: inset 0 0 0 1px var(--clr-el-gray-030);
        }
    .button_view_contour .button__shape:hover {
                box-shadow: inset 0 0 0 1px var(--clr-el-gray-040);
            }
    .button_width_max {
            width: 100%;
        }
    .button_width_auto {
            width: auto;
            max-width: max-content;
        }
    .button_with-left-icon .button__text {
        margin-left: 8px;
    }
    .button_with-right-icon .button__text {
        margin-right: 8px;
    }
    .button__text {
        font-weight: 400;
        text-align: center;
        white-space: nowrap;
        user-select: none;
        font-size: var(--button-font-size);
        line-height: var(--button-line-height);
        padding-bottom: var(--button-text-padding-bottom);
    }
.svg-direction-icon {
    transition-duration: 0.1s;
    transition-property: transform;
}

    .svg-direction-icon_direction_left {
            transform: rotate(90deg);
        }

    .svg-direction-icon_direction_right {
            transform: rotate(-90deg);
        }

    .svg-direction-icon_direction_up {
            transform: rotate(180deg);
        }

    .svg-direction-icon_direction_down {
            transform: rotate(0deg);
        }
.popup {
    position: absolute;
    box-sizing: border-box;

    user-select: none;

    opacity: 0;
    transition: opacity .1s ease-in, transform .1s ease-in;
    pointer-events: all;
}

    .popup_test {
        position: static;
        display: inline-block;
    }

    .popup {

    --transform-origin: top;
}

    .popup_direction_top {
            transform: translate(0, -5px);

            --tail-left: 50%;
            --tail-top: 100%;

            --tail-transform-x: 50%;
            --tail-transform-y: -100%;

            --tail-rotate: 180deg;
        }

    .popup_direction_left {
            transform: translate(-5px, 0);
            --transform-origin: 0 0;
            --tail-left: 100%;
            --tail-top: 50%;

            --tail-transform-x: -50%;
            --tail-transform-y: -100%;

            --tail-rotate: 90deg;
        }

    .popup_direction_bottom {
            transform: translate(0, 5px);

            --tail-left: 50%;
            --tail-top: 1px;

            --tail-transform-x: -50%;
            --tail-transform-y: -100%;

            --tail-rotate: 0deg;
        }

    .popup_direction_right {
            transform: translate(5px, 0);

            --tail-left: 0;
            --tail-top: 50%;

            --tail-transform-x: -50%;
            --tail-transform-y: -100%;

            --transform-origin: 0 0;

            --tail-rotate: -90deg;
        }

    .popup_visible {
        opacity: 1;
        transform: none;
    }

    .popup__tail {
        position: absolute;
        display: flex;

        left: var(--tail-left);
        top: var(--tail-top);

        transform-origin: var(--transform-origin);
        transform: rotate(var(--tail-rotate)) translate(var(--tail-transform-x), var(--tail-transform-y));
    }

    .popup_overflow {
        overflow: auto;
    }
.dropdown__popup {
        background-color: var(--clr-bg-gray-1);
        border-radius: 12px;
        box-shadow: var(--shdw-popover);
        overflow: hidden;
    }
    .dropdown__anchor,
    .dropdown__anchor-arrow {
        display: inline-block;
        user-select: none;
    }
    .dropdown__anchor:focus {
        outline: none;
    }
    .dropdown__anchor:focus-visible {
        box-shadow: var(--shdw-el-focused);
    }
    .dropdown__anchor-arrow {
        height: 16px;
    }
.options-list__item-container {
        padding: var(--space-8) var(--space-12) var(--space-8) var(--space-24);
        display: flex;
        justify-content: space-between;
        cursor: pointer;
        user-select: none;
    }

        .options-list__item-container:hover:not(.options-list__item-container_active):not(.options-list__item-container_disabled) {
            background-color: var(--clr-bg-gray-2);
        }

        .options-list__item-container_active {
            background-color: var(--clr-bg-gray-3);
        }

        .options-list__item-container_centered-content {
            align-items: center;
        }

        .options-list__item-container_disabled {
            cursor: default;
        }
    .options-list_width_auto {
        max-width: max-content;
    }
    .options-list__icon-container {
        margin-left: var(--space-12);
        width: 16px;
        height: 16px;
    }
    .options-list__icon {
        color: var(--clr-el-gray-080);
    }
    .options-list__item {
        display: flex;
        flex-direction: column;
        flex: 1;
        word-break: break-word;
        overflow-wrap: anywhere;
    }
    .options-list__item-header {
        display: flex;
        justify-content: space-between;
    }
    .options-list__item-title {
        color: var(--clr-el-gray-080);
        font-size: 14px;
        line-height: 20px;
    }
    .options-list__item-container_disabled .options-list__item-title {
        color: var(--clr-el-gray-050);
    }
    .options-list__item-subtitle {
        color: var(--clr-el-gray-060);
        font-size: 14px;
        line-height: 20px;
        margin-left: var(--space-12);
    }
    .options-list__item-container_disabled .options-list__item-subtitle {
        color: var(--clr-el-gray-050);
    }
    .options-list__item-description {
        color: var(--clr-el-gray-060);
        font-size: 14px;
        line-height: 20px;
    }
    .options-list__item-container_disabled .options-list__item-description {
        color: var(--clr-el-gray-050);
    }
.select {
    padding: var(--space-10) 0;
    min-width: max-content !important;
}

<button class=\\"button button_width_auto button_size_s32 button_view_shade button_mode_text button_with-right-icon\\"><div class=\\"button__shape\\"><span class=\\"button__text\\">Все тесты</span><svg width=\\"16px\\" fill=\\"var(--clr-el-gray-050)\\" height=\\"16px\\" class=\\"svg-direction-icon svg-direction-icon_direction_down\\" viewBox=\\"0 0 16 16\\"><path color=\\"currentColor\\" fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M12.7931 4.79265L8 9.58252L3.20687 4.79265C2.81621 4.40226 2.18304 4.40248 1.79265 4.79313C1.40226 5.18379 1.40248 5.81696 1.79313 6.20735L7.29313 11.7036C7.6836 12.0938 8.3164 12.0938 8.70687 11.7036L14.2069 6.20735C14.5975 5.81696 14.5977 5.18379 14.2073 4.79313C13.817 4.40248 13.1838 4.40226 12.7931 4.79265Z\\"></path></svg></div></button><div class=\\"popup dropdown__popup popup_visible popup_test\\" style=\\"z-index:1000\\"><div class=\\"dropdown select\\"><div class=\\"options-list options-list_width_auto\\"><div class=\\"options-list__item-container options-list__item-container_active\\"><div class=\\"options-list__item\\"><div class=\\"options-list__item-header\\"><span class=\\"options-list__item-title\\">Все тесты</span></div></div><div class=\\"options-list__icon-container\\"><svg width=\\"16px\\" fill=\\"currentColor\\" height=\\"16px\\" viewBox=\\"0 0 16 16\\" class=\\"options-list__icon\\"><path color=\\"currentColor\\" fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M5.94155 11.9376L2.2433 7.8284C1.87384 7.41789 1.24155 7.38461 0.831044 7.75407C0.420534 8.12353 0.387255 8.75582 0.756714 9.16633L5.25671 14.1663C5.67415 14.6301 6.40975 14.6026 6.79129 14.1088L15.2913 3.10881C15.629 2.6718 15.5485 2.04377 15.1115 1.70608C14.6744 1.36838 14.0464 1.4489 13.7087 1.88592L5.94155 11.9376Z\\"></path></svg></div></div><div class=\\"options-list__item-container\\"><div class=\\"options-list__item\\"><div class=\\"options-list__item-header\\"><span class=\\"options-list__item-title\\">Черновики</span></div></div><div class=\\"options-list__icon-container\\"></div></div><div class=\\"options-list__item-container\\"><div class=\\"options-list__item\\"><div class=\\"options-list__item-header\\"><span class=\\"options-list__item-title\\">Запланированные</span></div></div><div class=\\"options-list__icon-container\\"></div></div><div class=\\"options-list__item-container\\"><div class=\\"options-list__item\\"><div class=\\"options-list__item-header\\"><span class=\\"options-list__item-title\\">Запущенные</span></div></div><div class=\\"options-list__icon-container\\"></div></div><div class=\\"options-list__item-container\\"><div class=\\"options-list__item\\"><div class=\\"options-list__item-header\\"><span class=\\"options-list__item-title\\">Остановленные</span></div></div><div class=\\"options-list__icon-container\\"></div></div><div class=\\"options-list__item-container\\"><div class=\\"options-list__item\\"><div class=\\"options-list__item-header\\"><span class=\\"options-list__item-title\\">Закрытые</span></div></div><div class=\\"options-list__icon-container\\"></div></div></div></div></div>"
`;

exports[`Select screenshot disabled 1`] = `
":root {
    --clr-bg-gray-1: #ffffff;
    --clr-bg-gray-2: #f6f8fb;
    --clr-bg-gray-3: #eff2f7;
    --clr-bg-gray-500: #a3acbf;

    --clr-el-gray-000: #ffffff;
    --clr-el-gray-010: #cad6ee1a;
    --clr-el-gray-015: #b0bdd626;
    --clr-el-gray-020: #b0bdd633;
    --clr-el-gray-030: #a5b1ca4d;
    --clr-el-gray-040: #8694b066;
    --clr-el-gray-050: #475a8080;
    --clr-el-gray-060: #1a2b4d99;
    --clr-el-gray-070: #000c24b2;
    --clr-el-gray-080: #2f3747;
    --clr-el-gray-090: #121725f2;

    --clr-el-yellow-010: #ffdd574d;
    --clr-el-yellow-020: #ffdd578c;
    --clr-el-yellow-100: #ffdd57;
    --clr-el-yellow-200: #ffd21f;
    --clr-el-yellow-300: #f7c408;

    --clr-el-red-010: #dd00001a;
    --clr-el-red-020: #dd000033;
    --clr-el-red-040: #dd000066;
    --clr-el-red-060: #dd000099;
    --clr-el-red-100: #dd0000;

    --clr-el-green-010: #33b34326;
    --clr-el-green-020: #33b34340;
    --clr-el-green-060: #33b343b2;
    --clr-el-green-100: #33b343;

    --clr-el-blue-010: #498bff33;
    --clr-el-blue-060: #498bffb2;
    --clr-el-blue-100: #498bff;

    --clr-str-black-050: #475a807f;
    --clr-str-black-800: #2f3747;
    --clr-str-black-900: #252a38;

    --clr-str-white-060: #afc2e699;
    --clr-str-white-080: #d1e1ffcc;
    --clr-str-white-100: #fff;

    --clr-str-pure-white-050: #ffffff7f;
    --clr-str-pure-white-060: #ffffffb3;

    --clr-bg-app: var(--clr-bg-gray-3);

    --clr-dash-green-01: #65b812;
    --clr-dash-green-02: #9dd926;
    --clr-dash-green-03: #9dd92666;
    --clr-dash-green-04: #65b81233;

    --clr-dash-yellow-01: #ffcc00;
    --clr-dash-yellow-02: #ffe666;
    --clr-dash-yellow-03: #ffe66666;
    --clr-dash-yellow-04: #ffcc0033;

    --clr-dash-orange-01: #ff9a33;
    --clr-dash-orange-02: #ffb851;
    --clr-dash-orange-03: #ffb85166;
    --clr-dash-orange-04: #ff9a3333;

    --clr-dash-red-01: #e53c1a;
    --clr-dash-red-02: #ff6647;
    --clr-dash-red-03: #ff664766;
    --clr-dash-red-04: #e53c1a33;

    --clr-dash-violet-01: #7a45e6;
    --clr-dash-violet-02: #aa80ff;
    --clr-dash-violet-03: #7a45e533;
    --clr-dash-violet-04: #6e30e833;

    --clr-dash-blue-01: #3388ff;
    --clr-dash-blue-02: #66b3ff;
    --clr-dash-blue-03: #66b3ff66;
    --clr-dash-blue-04: #3388ff33;

    --clr-dash-grey-01: #c2c9d6;
    --clr-dash-grey-02: #e0e6ef;
    --clr-dash-grey-03: #e0e6ef66;
    --clr-dash-grey-04: #c2c9d633;

    --clr-dash-cornflow-01: #6673ff;
    --clr-dash-cornflow-02: #99a2ff;
    --clr-dash-cornflow-03: #99a2ff66;
    --clr-dash-cornflow-04: #6673ff33;

    --clr-dash-magenta-01: #ff3399;
    --clr-dash-magenta-02: #ff66b2;
    --clr-dash-magenta-03: #ff66b266;
    --clr-dash-magenta-04: #ff007f33;

    --clr-dash-dustmagenta-01: #cc297a;
    --clr-dash-dustmagenta-02: #d9418d;
    --clr-dash-dustmagenta-03: #d9418d66;
    --clr-dash-dustmagenta-04: #cc297a33;

    --clr-dash-dustpink-01: #e5515e;
    --clr-dash-dustpink-02: #e56772;
    --clr-dash-dustpink-03: #e7526366;
    --clr-dash-dustpink-04: #e5515e33;

    --clr-dash-dustblue-01: #4643bf;
    --clr-dash-dustblue-02: #5252cc;
    --clr-dash-dustblue-03: #5252cc66;
    --clr-dash-dustblue-04: #4f4cd933;

    --clr-dash-dustgreen-01: #4d993d;
    --clr-dash-dustgreen-02: #63a642;
    --clr-dash-dustgreen-03: #63a64266;
    --clr-dash-dustgreen-04: #4d993d33;

    --clr-dash-teal-01: #0fbda0;
    --clr-dash-teal-02: #36e2c6;
    --clr-dash-teal-03: #36e2c666;
    --clr-dash-teal-04: #0fbda033;

    --clr-dash-coffee-01: #965a3c;
    --clr-dash-coffee-02: #c86e46;
    --clr-dash-coffee-03: #c86e4666;
    --clr-dash-coffee-04: #965a3233;
}
:root {
    --space-2: 2px;
    --space-4: 4px;
    --space-5: 5px;
    --space-6: 6px;
    --space-8: 8px;
    --space-10: 10px;
    --space-12: 12px;
    --space-14: 14px;
    --space-16: 16px;
    --space-18: 18px;
    --space-20: 20px;
    --space-24: 24px;
    --space-28: 28px;
    --space-32: 32px;
    --space-40: 40px;
    --space-48: 48px;
}
@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/PyVcRbwHetz0gOVWLonWH7Od8zM.woff2') format('woff2'),
        url('//yastatic.net/islands/_/bIx8jOfCEfR-mECoDUEZywDBuHA.woff') format('woff');
    font-weight: 400;
    font-style: normal;
    font-display: optional;
}

@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/7_GKBdKFbUPzKlghJRv55xgz0FQ.woff2') format('woff2'),
        url('//yastatic.net/islands/_/SmqPmIMEXrW4lOY8QrhTUVDbrro.woff') format('woff');
    font-weight: 500;
    font-style: normal;
    font-display: optional;
}

@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/6Roy0LCd05cK4nNCipgzheYcNVU.woff2') format('woff2'),
        url('//yastatic.net/islands/_/KtHQR1erf3spayoIM4M4ngg0e2E.woff') format('woff');
    font-weight: 700;
    font-style: normal;
    font-display: optional;
}

body,
input,
textarea,
button {
    font-family: 'YS Text', arial, sans-serif;
}

:root {
    --line-height-13: 13px;
    --line-height-14: 14px;
    --line-height-16: 16px;
    --line-height-18: 18px;
    --line-height-20: 20px;
    --line-height-24: 24px;
    --line-height-28: 28px;
    --line-height-32: 32px;
    --line-height-40: 40px;

    --font-size-11: 11px;
    --font-size-12: 12px;
    --font-size-14: 14px;
    --font-size-16: 16px;
    --font-size-20: 20px;
    --font-size-24: 24px;
    --font-size-32: 32px;
}
:root {
    --shdw-popover: 0px 0px 3px rgba(165, 177, 202, 0.3), 0px 10px 40px rgba(165, 177, 202, 0.3);
    --shdw-el-focused: 0 0 0 2px var(--clr-el-blue-060);
}
.button {
    border: none;
    cursor: pointer;
    background-color: transparent;
    padding: 0;
    outline: none;
}
    .button:focus-visible .button__shape {
        box-shadow: var(--shdw-el-focused);
    }
    .button__shape {
        display: flex;
        align-items: center;
        justify-content: center;
        transition: transform 0.1s ease-out, color 0.15s linear;
        color: var(--clr-el-gray-080);
        border-radius: var(--button-border-radius);
    }
    .button_rounded .button__shape {
        border-radius: calc(
            (
                    var(--button-mode-text-vertical-padding) * 2 + var(--button-line-height) +
                        var(--button-text-padding-bottom)
                ) / 2
        );
    }
    .button:active .button__shape {
        transition: none;
        transform: scale(0.96);
    }
    .button:disabled .button__shape,
    .button:disabled:hover .button__shape {
        transform: scale(1);
        background-color: var(--clr-el-gray-020);
        color: var(--clr-el-gray-050);
        cursor: default;
    }
    .button_mode_icon .button__shape {
            padding: var(--button-mode-icon-padding);
        }
    .button_mode_text .button__shape {
            padding: var(--button-mode-text-padding);
        }
    .button_with-left-icon .button__shape {
        padding-left: var(--button-mode-text-with-icon-horizontal-padding);
    }
    .button_with-right-icon .button__shape {
        padding-right: var(--button-mode-text-with-icon-horizontal-padding);
    }
    .button_size_s32 {
            --button-border-radius: 10px;
            --button-font-size: 14px;
            --button-line-height: 20px;

            --button-mode-text-vertical-padding: 5px;
            --button-mode-text-padding: var(--button-mode-text-vertical-padding) var(--space-12);
            --button-mode-text-with-icon-horizontal-padding: var(--space-8);
            --button-text-padding-bottom: var(--space-2);

            --button-mode-icon-padding: var(--space-8);
        }
    .button_size_s36 {
            --button-border-radius: 12px;
            --button-font-size: 14px;
            --button-line-height: 20px;

            --button-mode-text-padding: var(--space-8) var(--space-16);
            --button-mode-text-with-icon-horizontal-padding: var(--space-12);
            --button-text-padding-bottom: 0;

            --button-mode-icon-padding: 10px;
        }
    .button_size_s44 {
            --button-border-radius: 14px;
            --button-font-size: 16px;
            --button-line-height: 24px;

            --button-mode-text-vertical-padding: 10px;
            --button-mode-text-padding: var(--button-mode-text-vertical-padding) var(--space-20);
            --button-mode-text-with-icon-horizontal-padding: 14px;
            --button-text-padding-bottom: 0px;

            --button-mode-icon-padding: 10px;
        }
    .button_size_s56 {
            --button-border-radius: 14px;
            --button-font-size: 20px;
            --button-line-height: 28px;

            --button-mode-text-vertical-padding: 13px;
            --button-mode-text-padding: var(--button-mode-text-vertical-padding) var(--space-20);
            --button-mode-text-with-icon-horizontal-padding: 14px;
            --button-text-padding-bottom: var(--space-2);

            --button-mode-icon-padding: var(--space-16);
        }
    .button_view_contrast .button__shape {
            background-color: var(--clr-bg-gray-1);
        }
    .button_view_contrast .button__shape:hover {
                background-color: var(--clr-bg-gray-2);
            }
    .button_view_contrast .button__shape:active {
                background-color: var(--clr-bg-gray-2);
            }
    .button_view_shade .button__shape {
            background-color: var(--clr-el-gray-020);
        }
    .button_view_shade .button__shape:hover {
                background-color: var(--clr-el-gray-030);
            }
    .button_view_shade .button__shape:active {
                background-color: var(--clr-el-gray-030);
            }
    .button_view_primary .button__shape {
            background-color: var(--clr-el-yellow-100);
        }
    .button_view_primary .button__shape:hover {
                background-color: var(--clr-el-yellow-200);
            }
    .button_view_primary .button__shape:active {
                background-color: var(--clr-el-yellow-200);
            }
    .button_view_contour .button__shape {
            box-shadow: inset 0 0 0 1px var(--clr-el-gray-030);
        }
    .button_view_contour .button__shape:hover {
                box-shadow: inset 0 0 0 1px var(--clr-el-gray-040);
            }
    .button_width_max {
            width: 100%;
        }
    .button_width_auto {
            width: auto;
            max-width: max-content;
        }
    .button_with-left-icon .button__text {
        margin-left: 8px;
    }
    .button_with-right-icon .button__text {
        margin-right: 8px;
    }
    .button__text {
        font-weight: 400;
        text-align: center;
        white-space: nowrap;
        user-select: none;
        font-size: var(--button-font-size);
        line-height: var(--button-line-height);
        padding-bottom: var(--button-text-padding-bottom);
    }
.svg-direction-icon {
    transition-duration: 0.1s;
    transition-property: transform;
}

    .svg-direction-icon_direction_left {
            transform: rotate(90deg);
        }

    .svg-direction-icon_direction_right {
            transform: rotate(-90deg);
        }

    .svg-direction-icon_direction_up {
            transform: rotate(180deg);
        }

    .svg-direction-icon_direction_down {
            transform: rotate(0deg);
        }
.popup {
    position: absolute;
    box-sizing: border-box;

    user-select: none;

    opacity: 0;
    transition: opacity .1s ease-in, transform .1s ease-in;
    pointer-events: all;
}

    .popup_test {
        position: static;
        display: inline-block;
    }

    .popup {

    --transform-origin: top;
}

    .popup_direction_top {
            transform: translate(0, -5px);

            --tail-left: 50%;
            --tail-top: 100%;

            --tail-transform-x: 50%;
            --tail-transform-y: -100%;

            --tail-rotate: 180deg;
        }

    .popup_direction_left {
            transform: translate(-5px, 0);
            --transform-origin: 0 0;
            --tail-left: 100%;
            --tail-top: 50%;

            --tail-transform-x: -50%;
            --tail-transform-y: -100%;

            --tail-rotate: 90deg;
        }

    .popup_direction_bottom {
            transform: translate(0, 5px);

            --tail-left: 50%;
            --tail-top: 1px;

            --tail-transform-x: -50%;
            --tail-transform-y: -100%;

            --tail-rotate: 0deg;
        }

    .popup_direction_right {
            transform: translate(5px, 0);

            --tail-left: 0;
            --tail-top: 50%;

            --tail-transform-x: -50%;
            --tail-transform-y: -100%;

            --transform-origin: 0 0;

            --tail-rotate: -90deg;
        }

    .popup_visible {
        opacity: 1;
        transform: none;
    }

    .popup__tail {
        position: absolute;
        display: flex;

        left: var(--tail-left);
        top: var(--tail-top);

        transform-origin: var(--transform-origin);
        transform: rotate(var(--tail-rotate)) translate(var(--tail-transform-x), var(--tail-transform-y));
    }

    .popup_overflow {
        overflow: auto;
    }
.dropdown__popup {
        background-color: var(--clr-bg-gray-1);
        border-radius: 12px;
        box-shadow: var(--shdw-popover);
        overflow: hidden;
    }
    .dropdown__anchor,
    .dropdown__anchor-arrow {
        display: inline-block;
        user-select: none;
    }
    .dropdown__anchor:focus {
        outline: none;
    }
    .dropdown__anchor:focus-visible {
        box-shadow: var(--shdw-el-focused);
    }
    .dropdown__anchor-arrow {
        height: 16px;
    }
.options-list__item-container {
        padding: var(--space-8) var(--space-12) var(--space-8) var(--space-24);
        display: flex;
        justify-content: space-between;
        cursor: pointer;
        user-select: none;
    }

        .options-list__item-container:hover:not(.options-list__item-container_active):not(.options-list__item-container_disabled) {
            background-color: var(--clr-bg-gray-2);
        }

        .options-list__item-container_active {
            background-color: var(--clr-bg-gray-3);
        }

        .options-list__item-container_centered-content {
            align-items: center;
        }

        .options-list__item-container_disabled {
            cursor: default;
        }
    .options-list_width_auto {
        max-width: max-content;
    }
    .options-list__icon-container {
        margin-left: var(--space-12);
        width: 16px;
        height: 16px;
    }
    .options-list__icon {
        color: var(--clr-el-gray-080);
    }
    .options-list__item {
        display: flex;
        flex-direction: column;
        flex: 1;
        word-break: break-word;
        overflow-wrap: anywhere;
    }
    .options-list__item-header {
        display: flex;
        justify-content: space-between;
    }
    .options-list__item-title {
        color: var(--clr-el-gray-080);
        font-size: 14px;
        line-height: 20px;
    }
    .options-list__item-container_disabled .options-list__item-title {
        color: var(--clr-el-gray-050);
    }
    .options-list__item-subtitle {
        color: var(--clr-el-gray-060);
        font-size: 14px;
        line-height: 20px;
        margin-left: var(--space-12);
    }
    .options-list__item-container_disabled .options-list__item-subtitle {
        color: var(--clr-el-gray-050);
    }
    .options-list__item-description {
        color: var(--clr-el-gray-060);
        font-size: 14px;
        line-height: 20px;
    }
    .options-list__item-container_disabled .options-list__item-description {
        color: var(--clr-el-gray-050);
    }
.select {
    padding: var(--space-10) 0;
    min-width: max-content !important;
}

<button class=\\"button button_width_auto button_size_s32 button_view_shade button_mode_text button_with-right-icon\\" disabled=\\"\\"><div class=\\"button__shape\\"><span class=\\"button__text\\">Черновики</span><svg width=\\"16px\\" fill=\\"var(--clr-el-gray-040)\\" height=\\"16px\\" class=\\"svg-direction-icon svg-direction-icon_direction_down\\" viewBox=\\"0 0 16 16\\"><path color=\\"currentColor\\" fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M12.7931 4.79265L8 9.58252L3.20687 4.79265C2.81621 4.40226 2.18304 4.40248 1.79265 4.79313C1.40226 5.18379 1.40248 5.81696 1.79313 6.20735L7.29313 11.7036C7.6836 12.0938 8.3164 12.0938 8.70687 11.7036L14.2069 6.20735C14.5975 5.81696 14.5977 5.18379 14.2073 4.79313C13.817 4.40248 13.1838 4.40226 12.7931 4.79265Z\\"></path></svg></div></button><div class=\\"popup dropdown__popup popup_visible popup_test\\" style=\\"z-index:1000\\"><div class=\\"dropdown select\\"><div class=\\"options-list options-list_width_auto\\"><div class=\\"options-list__item-container\\"><div class=\\"options-list__item\\"><div class=\\"options-list__item-header\\"><span class=\\"options-list__item-title\\">Все тесты</span></div></div><div class=\\"options-list__icon-container\\"></div></div><div class=\\"options-list__item-container options-list__item-container_active\\"><div class=\\"options-list__item\\"><div class=\\"options-list__item-header\\"><span class=\\"options-list__item-title\\">Черновики</span></div></div><div class=\\"options-list__icon-container\\"><svg width=\\"16px\\" fill=\\"currentColor\\" height=\\"16px\\" viewBox=\\"0 0 16 16\\" class=\\"options-list__icon\\"><path color=\\"currentColor\\" fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M5.94155 11.9376L2.2433 7.8284C1.87384 7.41789 1.24155 7.38461 0.831044 7.75407C0.420534 8.12353 0.387255 8.75582 0.756714 9.16633L5.25671 14.1663C5.67415 14.6301 6.40975 14.6026 6.79129 14.1088L15.2913 3.10881C15.629 2.6718 15.5485 2.04377 15.1115 1.70608C14.6744 1.36838 14.0464 1.4489 13.7087 1.88592L5.94155 11.9376Z\\"></path></svg></div></div><div class=\\"options-list__item-container\\"><div class=\\"options-list__item\\"><div class=\\"options-list__item-header\\"><span class=\\"options-list__item-title\\">Запланированные</span></div></div><div class=\\"options-list__icon-container\\"></div></div><div class=\\"options-list__item-container\\"><div class=\\"options-list__item\\"><div class=\\"options-list__item-header\\"><span class=\\"options-list__item-title\\">Запущенные</span></div></div><div class=\\"options-list__icon-container\\"></div></div><div class=\\"options-list__item-container\\"><div class=\\"options-list__item\\"><div class=\\"options-list__item-header\\"><span class=\\"options-list__item-title\\">Остановленные</span></div></div><div class=\\"options-list__icon-container\\"></div></div><div class=\\"options-list__item-container\\"><div class=\\"options-list__item\\"><div class=\\"options-list__item-header\\"><span class=\\"options-list__item-title\\">Закрытые</span></div></div><div class=\\"options-list__icon-container\\"></div></div></div></div></div>"
`;

exports[`Select screenshot multiple 1`] = `
":root {
    --clr-bg-gray-1: #ffffff;
    --clr-bg-gray-2: #f6f8fb;
    --clr-bg-gray-3: #eff2f7;
    --clr-bg-gray-500: #a3acbf;

    --clr-el-gray-000: #ffffff;
    --clr-el-gray-010: #cad6ee1a;
    --clr-el-gray-015: #b0bdd626;
    --clr-el-gray-020: #b0bdd633;
    --clr-el-gray-030: #a5b1ca4d;
    --clr-el-gray-040: #8694b066;
    --clr-el-gray-050: #475a8080;
    --clr-el-gray-060: #1a2b4d99;
    --clr-el-gray-070: #000c24b2;
    --clr-el-gray-080: #2f3747;
    --clr-el-gray-090: #121725f2;

    --clr-el-yellow-010: #ffdd574d;
    --clr-el-yellow-020: #ffdd578c;
    --clr-el-yellow-100: #ffdd57;
    --clr-el-yellow-200: #ffd21f;
    --clr-el-yellow-300: #f7c408;

    --clr-el-red-010: #dd00001a;
    --clr-el-red-020: #dd000033;
    --clr-el-red-040: #dd000066;
    --clr-el-red-060: #dd000099;
    --clr-el-red-100: #dd0000;

    --clr-el-green-010: #33b34326;
    --clr-el-green-020: #33b34340;
    --clr-el-green-060: #33b343b2;
    --clr-el-green-100: #33b343;

    --clr-el-blue-010: #498bff33;
    --clr-el-blue-060: #498bffb2;
    --clr-el-blue-100: #498bff;

    --clr-str-black-050: #475a807f;
    --clr-str-black-800: #2f3747;
    --clr-str-black-900: #252a38;

    --clr-str-white-060: #afc2e699;
    --clr-str-white-080: #d1e1ffcc;
    --clr-str-white-100: #fff;

    --clr-str-pure-white-050: #ffffff7f;
    --clr-str-pure-white-060: #ffffffb3;

    --clr-bg-app: var(--clr-bg-gray-3);

    --clr-dash-green-01: #65b812;
    --clr-dash-green-02: #9dd926;
    --clr-dash-green-03: #9dd92666;
    --clr-dash-green-04: #65b81233;

    --clr-dash-yellow-01: #ffcc00;
    --clr-dash-yellow-02: #ffe666;
    --clr-dash-yellow-03: #ffe66666;
    --clr-dash-yellow-04: #ffcc0033;

    --clr-dash-orange-01: #ff9a33;
    --clr-dash-orange-02: #ffb851;
    --clr-dash-orange-03: #ffb85166;
    --clr-dash-orange-04: #ff9a3333;

    --clr-dash-red-01: #e53c1a;
    --clr-dash-red-02: #ff6647;
    --clr-dash-red-03: #ff664766;
    --clr-dash-red-04: #e53c1a33;

    --clr-dash-violet-01: #7a45e6;
    --clr-dash-violet-02: #aa80ff;
    --clr-dash-violet-03: #7a45e533;
    --clr-dash-violet-04: #6e30e833;

    --clr-dash-blue-01: #3388ff;
    --clr-dash-blue-02: #66b3ff;
    --clr-dash-blue-03: #66b3ff66;
    --clr-dash-blue-04: #3388ff33;

    --clr-dash-grey-01: #c2c9d6;
    --clr-dash-grey-02: #e0e6ef;
    --clr-dash-grey-03: #e0e6ef66;
    --clr-dash-grey-04: #c2c9d633;

    --clr-dash-cornflow-01: #6673ff;
    --clr-dash-cornflow-02: #99a2ff;
    --clr-dash-cornflow-03: #99a2ff66;
    --clr-dash-cornflow-04: #6673ff33;

    --clr-dash-magenta-01: #ff3399;
    --clr-dash-magenta-02: #ff66b2;
    --clr-dash-magenta-03: #ff66b266;
    --clr-dash-magenta-04: #ff007f33;

    --clr-dash-dustmagenta-01: #cc297a;
    --clr-dash-dustmagenta-02: #d9418d;
    --clr-dash-dustmagenta-03: #d9418d66;
    --clr-dash-dustmagenta-04: #cc297a33;

    --clr-dash-dustpink-01: #e5515e;
    --clr-dash-dustpink-02: #e56772;
    --clr-dash-dustpink-03: #e7526366;
    --clr-dash-dustpink-04: #e5515e33;

    --clr-dash-dustblue-01: #4643bf;
    --clr-dash-dustblue-02: #5252cc;
    --clr-dash-dustblue-03: #5252cc66;
    --clr-dash-dustblue-04: #4f4cd933;

    --clr-dash-dustgreen-01: #4d993d;
    --clr-dash-dustgreen-02: #63a642;
    --clr-dash-dustgreen-03: #63a64266;
    --clr-dash-dustgreen-04: #4d993d33;

    --clr-dash-teal-01: #0fbda0;
    --clr-dash-teal-02: #36e2c6;
    --clr-dash-teal-03: #36e2c666;
    --clr-dash-teal-04: #0fbda033;

    --clr-dash-coffee-01: #965a3c;
    --clr-dash-coffee-02: #c86e46;
    --clr-dash-coffee-03: #c86e4666;
    --clr-dash-coffee-04: #965a3233;
}
:root {
    --space-2: 2px;
    --space-4: 4px;
    --space-5: 5px;
    --space-6: 6px;
    --space-8: 8px;
    --space-10: 10px;
    --space-12: 12px;
    --space-14: 14px;
    --space-16: 16px;
    --space-18: 18px;
    --space-20: 20px;
    --space-24: 24px;
    --space-28: 28px;
    --space-32: 32px;
    --space-40: 40px;
    --space-48: 48px;
}
@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/PyVcRbwHetz0gOVWLonWH7Od8zM.woff2') format('woff2'),
        url('//yastatic.net/islands/_/bIx8jOfCEfR-mECoDUEZywDBuHA.woff') format('woff');
    font-weight: 400;
    font-style: normal;
    font-display: optional;
}

@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/7_GKBdKFbUPzKlghJRv55xgz0FQ.woff2') format('woff2'),
        url('//yastatic.net/islands/_/SmqPmIMEXrW4lOY8QrhTUVDbrro.woff') format('woff');
    font-weight: 500;
    font-style: normal;
    font-display: optional;
}

@font-face {
    font-family: 'YS Text';
    src: url('//yastatic.net/islands/_/6Roy0LCd05cK4nNCipgzheYcNVU.woff2') format('woff2'),
        url('//yastatic.net/islands/_/KtHQR1erf3spayoIM4M4ngg0e2E.woff') format('woff');
    font-weight: 700;
    font-style: normal;
    font-display: optional;
}

body,
input,
textarea,
button {
    font-family: 'YS Text', arial, sans-serif;
}

:root {
    --line-height-13: 13px;
    --line-height-14: 14px;
    --line-height-16: 16px;
    --line-height-18: 18px;
    --line-height-20: 20px;
    --line-height-24: 24px;
    --line-height-28: 28px;
    --line-height-32: 32px;
    --line-height-40: 40px;

    --font-size-11: 11px;
    --font-size-12: 12px;
    --font-size-14: 14px;
    --font-size-16: 16px;
    --font-size-20: 20px;
    --font-size-24: 24px;
    --font-size-32: 32px;
}
:root {
    --shdw-popover: 0px 0px 3px rgba(165, 177, 202, 0.3), 0px 10px 40px rgba(165, 177, 202, 0.3);
    --shdw-el-focused: 0 0 0 2px var(--clr-el-blue-060);
}
.button {
    border: none;
    cursor: pointer;
    background-color: transparent;
    padding: 0;
    outline: none;
}
    .button:focus-visible .button__shape {
        box-shadow: var(--shdw-el-focused);
    }
    .button__shape {
        display: flex;
        align-items: center;
        justify-content: center;
        transition: transform 0.1s ease-out, color 0.15s linear;
        color: var(--clr-el-gray-080);
        border-radius: var(--button-border-radius);
    }
    .button_rounded .button__shape {
        border-radius: calc(
            (
                    var(--button-mode-text-vertical-padding) * 2 + var(--button-line-height) +
                        var(--button-text-padding-bottom)
                ) / 2
        );
    }
    .button:active .button__shape {
        transition: none;
        transform: scale(0.96);
    }
    .button:disabled .button__shape,
    .button:disabled:hover .button__shape {
        transform: scale(1);
        background-color: var(--clr-el-gray-020);
        color: var(--clr-el-gray-050);
        cursor: default;
    }
    .button_mode_icon .button__shape {
            padding: var(--button-mode-icon-padding);
        }
    .button_mode_text .button__shape {
            padding: var(--button-mode-text-padding);
        }
    .button_with-left-icon .button__shape {
        padding-left: var(--button-mode-text-with-icon-horizontal-padding);
    }
    .button_with-right-icon .button__shape {
        padding-right: var(--button-mode-text-with-icon-horizontal-padding);
    }
    .button_size_s32 {
            --button-border-radius: 10px;
            --button-font-size: 14px;
            --button-line-height: 20px;

            --button-mode-text-vertical-padding: 5px;
            --button-mode-text-padding: var(--button-mode-text-vertical-padding) var(--space-12);
            --button-mode-text-with-icon-horizontal-padding: var(--space-8);
            --button-text-padding-bottom: var(--space-2);

            --button-mode-icon-padding: var(--space-8);
        }
    .button_size_s36 {
            --button-border-radius: 12px;
            --button-font-size: 14px;
            --button-line-height: 20px;

            --button-mode-text-padding: var(--space-8) var(--space-16);
            --button-mode-text-with-icon-horizontal-padding: var(--space-12);
            --button-text-padding-bottom: 0;

            --button-mode-icon-padding: 10px;
        }
    .button_size_s44 {
            --button-border-radius: 14px;
            --button-font-size: 16px;
            --button-line-height: 24px;

            --button-mode-text-vertical-padding: 10px;
            --button-mode-text-padding: var(--button-mode-text-vertical-padding) var(--space-20);
            --button-mode-text-with-icon-horizontal-padding: 14px;
            --button-text-padding-bottom: 0px;

            --button-mode-icon-padding: 10px;
        }
    .button_size_s56 {
            --button-border-radius: 14px;
            --button-font-size: 20px;
            --button-line-height: 28px;

            --button-mode-text-vertical-padding: 13px;
            --button-mode-text-padding: var(--button-mode-text-vertical-padding) var(--space-20);
            --button-mode-text-with-icon-horizontal-padding: 14px;
            --button-text-padding-bottom: var(--space-2);

            --button-mode-icon-padding: var(--space-16);
        }
    .button_view_contrast .button__shape {
            background-color: var(--clr-bg-gray-1);
        }
    .button_view_contrast .button__shape:hover {
                background-color: var(--clr-bg-gray-2);
            }
    .button_view_contrast .button__shape:active {
                background-color: var(--clr-bg-gray-2);
            }
    .button_view_shade .button__shape {
            background-color: var(--clr-el-gray-020);
        }
    .button_view_shade .button__shape:hover {
                background-color: var(--clr-el-gray-030);
            }
    .button_view_shade .button__shape:active {
                background-color: var(--clr-el-gray-030);
            }
    .button_view_primary .button__shape {
            background-color: var(--clr-el-yellow-100);
        }
    .button_view_primary .button__shape:hover {
                background-color: var(--clr-el-yellow-200);
            }
    .button_view_primary .button__shape:active {
                background-color: var(--clr-el-yellow-200);
            }
    .button_view_contour .button__shape {
            box-shadow: inset 0 0 0 1px var(--clr-el-gray-030);
        }
    .button_view_contour .button__shape:hover {
                box-shadow: inset 0 0 0 1px var(--clr-el-gray-040);
            }
    .button_width_max {
            width: 100%;
        }
    .button_width_auto {
            width: auto;
            max-width: max-content;
        }
    .button_with-left-icon .button__text {
        margin-left: 8px;
    }
    .button_with-right-icon .button__text {
        margin-right: 8px;
    }
    .button__text {
        font-weight: 400;
        text-align: center;
        white-space: nowrap;
        user-select: none;
        font-size: var(--button-font-size);
        line-height: var(--button-line-height);
        padding-bottom: var(--button-text-padding-bottom);
    }
.svg-direction-icon {
    transition-duration: 0.1s;
    transition-property: transform;
}

    .svg-direction-icon_direction_left {
            transform: rotate(90deg);
        }

    .svg-direction-icon_direction_right {
            transform: rotate(-90deg);
        }

    .svg-direction-icon_direction_up {
            transform: rotate(180deg);
        }

    .svg-direction-icon_direction_down {
            transform: rotate(0deg);
        }
.popup {
    position: absolute;
    box-sizing: border-box;

    user-select: none;

    opacity: 0;
    transition: opacity .1s ease-in, transform .1s ease-in;
    pointer-events: all;
}

    .popup_test {
        position: static;
        display: inline-block;
    }

    .popup {

    --transform-origin: top;
}

    .popup_direction_top {
            transform: translate(0, -5px);

            --tail-left: 50%;
            --tail-top: 100%;

            --tail-transform-x: 50%;
            --tail-transform-y: -100%;

            --tail-rotate: 180deg;
        }

    .popup_direction_left {
            transform: translate(-5px, 0);
            --transform-origin: 0 0;
            --tail-left: 100%;
            --tail-top: 50%;

            --tail-transform-x: -50%;
            --tail-transform-y: -100%;

            --tail-rotate: 90deg;
        }

    .popup_direction_bottom {
            transform: translate(0, 5px);

            --tail-left: 50%;
            --tail-top: 1px;

            --tail-transform-x: -50%;
            --tail-transform-y: -100%;

            --tail-rotate: 0deg;
        }

    .popup_direction_right {
            transform: translate(5px, 0);

            --tail-left: 0;
            --tail-top: 50%;

            --tail-transform-x: -50%;
            --tail-transform-y: -100%;

            --transform-origin: 0 0;

            --tail-rotate: -90deg;
        }

    .popup_visible {
        opacity: 1;
        transform: none;
    }

    .popup__tail {
        position: absolute;
        display: flex;

        left: var(--tail-left);
        top: var(--tail-top);

        transform-origin: var(--transform-origin);
        transform: rotate(var(--tail-rotate)) translate(var(--tail-transform-x), var(--tail-transform-y));
    }

    .popup_overflow {
        overflow: auto;
    }
.dropdown__popup {
        background-color: var(--clr-bg-gray-1);
        border-radius: 12px;
        box-shadow: var(--shdw-popover);
        overflow: hidden;
    }
    .dropdown__anchor,
    .dropdown__anchor-arrow {
        display: inline-block;
        user-select: none;
    }
    .dropdown__anchor:focus {
        outline: none;
    }
    .dropdown__anchor:focus-visible {
        box-shadow: var(--shdw-el-focused);
    }
    .dropdown__anchor-arrow {
        height: 16px;
    }
.options-list__item-container {
        padding: var(--space-8) var(--space-12) var(--space-8) var(--space-24);
        display: flex;
        justify-content: space-between;
        cursor: pointer;
        user-select: none;
    }

        .options-list__item-container:hover:not(.options-list__item-container_active):not(.options-list__item-container_disabled) {
            background-color: var(--clr-bg-gray-2);
        }

        .options-list__item-container_active {
            background-color: var(--clr-bg-gray-3);
        }

        .options-list__item-container_centered-content {
            align-items: center;
        }

        .options-list__item-container_disabled {
            cursor: default;
        }
    .options-list_width_auto {
        max-width: max-content;
    }
    .options-list__icon-container {
        margin-left: var(--space-12);
        width: 16px;
        height: 16px;
    }
    .options-list__icon {
        color: var(--clr-el-gray-080);
    }
    .options-list__item {
        display: flex;
        flex-direction: column;
        flex: 1;
        word-break: break-word;
        overflow-wrap: anywhere;
    }
    .options-list__item-header {
        display: flex;
        justify-content: space-between;
    }
    .options-list__item-title {
        color: var(--clr-el-gray-080);
        font-size: 14px;
        line-height: 20px;
    }
    .options-list__item-container_disabled .options-list__item-title {
        color: var(--clr-el-gray-050);
    }
    .options-list__item-subtitle {
        color: var(--clr-el-gray-060);
        font-size: 14px;
        line-height: 20px;
        margin-left: var(--space-12);
    }
    .options-list__item-container_disabled .options-list__item-subtitle {
        color: var(--clr-el-gray-050);
    }
    .options-list__item-description {
        color: var(--clr-el-gray-060);
        font-size: 14px;
        line-height: 20px;
    }
    .options-list__item-container_disabled .options-list__item-description {
        color: var(--clr-el-gray-050);
    }
.select {
    padding: var(--space-10) 0;
    min-width: max-content !important;
}

<button class=\\"button button_width_auto button_size_s32 button_view_shade button_mode_text button_with-right-icon\\"><div class=\\"button__shape\\"><span class=\\"button__text\\">Все тесты, Черновики, Закрытые</span><svg width=\\"16px\\" fill=\\"var(--clr-el-gray-050)\\" height=\\"16px\\" class=\\"svg-direction-icon svg-direction-icon_direction_down\\" viewBox=\\"0 0 16 16\\"><path color=\\"currentColor\\" fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M12.7931 4.79265L8 9.58252L3.20687 4.79265C2.81621 4.40226 2.18304 4.40248 1.79265 4.79313C1.40226 5.18379 1.40248 5.81696 1.79313 6.20735L7.29313 11.7036C7.6836 12.0938 8.3164 12.0938 8.70687 11.7036L14.2069 6.20735C14.5975 5.81696 14.5977 5.18379 14.2073 4.79313C13.817 4.40248 13.1838 4.40226 12.7931 4.79265Z\\"></path></svg></div></button><div class=\\"popup dropdown__popup popup_visible popup_test\\" style=\\"z-index:1000\\"><div class=\\"dropdown select\\"><div class=\\"options-list options-list_width_auto\\"><div class=\\"options-list__item-container options-list__item-container_active\\"><div class=\\"options-list__item\\"><div class=\\"options-list__item-header\\"><span class=\\"options-list__item-title\\">Все тесты</span></div></div><div class=\\"options-list__icon-container\\"><svg width=\\"16px\\" fill=\\"currentColor\\" height=\\"16px\\" viewBox=\\"0 0 16 16\\" class=\\"options-list__icon\\"><path color=\\"currentColor\\" fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M5.94155 11.9376L2.2433 7.8284C1.87384 7.41789 1.24155 7.38461 0.831044 7.75407C0.420534 8.12353 0.387255 8.75582 0.756714 9.16633L5.25671 14.1663C5.67415 14.6301 6.40975 14.6026 6.79129 14.1088L15.2913 3.10881C15.629 2.6718 15.5485 2.04377 15.1115 1.70608C14.6744 1.36838 14.0464 1.4489 13.7087 1.88592L5.94155 11.9376Z\\"></path></svg></div></div><div class=\\"options-list__item-container\\"><div class=\\"options-list__item\\"><div class=\\"options-list__item-header\\"><span class=\\"options-list__item-title\\">Черновики</span></div></div><div class=\\"options-list__icon-container\\"><svg width=\\"16px\\" fill=\\"currentColor\\" height=\\"16px\\" viewBox=\\"0 0 16 16\\" class=\\"options-list__icon\\"><path color=\\"currentColor\\" fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M5.94155 11.9376L2.2433 7.8284C1.87384 7.41789 1.24155 7.38461 0.831044 7.75407C0.420534 8.12353 0.387255 8.75582 0.756714 9.16633L5.25671 14.1663C5.67415 14.6301 6.40975 14.6026 6.79129 14.1088L15.2913 3.10881C15.629 2.6718 15.5485 2.04377 15.1115 1.70608C14.6744 1.36838 14.0464 1.4489 13.7087 1.88592L5.94155 11.9376Z\\"></path></svg></div></div><div class=\\"options-list__item-container\\"><div class=\\"options-list__item\\"><div class=\\"options-list__item-header\\"><span class=\\"options-list__item-title\\">Запланированные</span></div></div><div class=\\"options-list__icon-container\\"></div></div><div class=\\"options-list__item-container\\"><div class=\\"options-list__item\\"><div class=\\"options-list__item-header\\"><span class=\\"options-list__item-title\\">Запущенные</span></div></div><div class=\\"options-list__icon-container\\"></div></div><div class=\\"options-list__item-container\\"><div class=\\"options-list__item\\"><div class=\\"options-list__item-header\\"><span class=\\"options-list__item-title\\">Остановленные</span></div></div><div class=\\"options-list__icon-container\\"></div></div><div class=\\"options-list__item-container\\"><div class=\\"options-list__item\\"><div class=\\"options-list__item-header\\"><span class=\\"options-list__item-title\\">Закрытые</span></div></div><div class=\\"options-list__icon-container\\"><svg width=\\"16px\\" fill=\\"currentColor\\" height=\\"16px\\" viewBox=\\"0 0 16 16\\" class=\\"options-list__icon\\"><path color=\\"currentColor\\" fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M5.94155 11.9376L2.2433 7.8284C1.87384 7.41789 1.24155 7.38461 0.831044 7.75407C0.420534 8.12353 0.387255 8.75582 0.756714 9.16633L5.25671 14.1663C5.67415 14.6301 6.40975 14.6026 6.79129 14.1088L15.2913 3.10881C15.629 2.6718 15.5485 2.04377 15.1115 1.70608C14.6744 1.36838 14.0464 1.4489 13.7087 1.88592L5.94155 11.9376Z\\"></path></svg></div></div></div></div></div>"
`;
